# actix-multipart-derive

./: CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
actix-multipart-derive/: Cargo.toml
actix-multipart-derive-impl/: Cargo.toml
actix-multipart-derive-impl/src/: lib.rs
actix-multipart-derive-impl/tests/trybuild/: 01-basic.rs  02-max-size.rs
actix-multipart-derive/examples/: file-and-field.rs
actix-multipart-derive/src/: byte_builder.rs  lib.rs
